# rs-before-main

./: .gitignore  Cargo.toml  README.md
fasterthanlime/nasm_warmup/: Makefile  getsize.c  readfile-rs.rs  readfile.asm  spare-parts.tgz
fasterthanlime/packer/delf/: Cargo.toml
fasterthanlime/packer/delf/src/: lib.rs  parse.rs
fasterthanlime/packer/elk/: Cargo.toml
fasterthanlime/packer/elk/aarch64/: Makefile  entry_point  entry_point.c  hello  hello.s  instructions.h
fasterthanlime/packer/elk/samples/: Makefile  entry_point  entry_point.c  hello-pie  hello-pie.asm  instructions.h  nodata
fasterthanlime/packer/elk/src/: main.rs
fasterthanlime/part-1/elk/: Cargo.toml
fasterthanlime/part-1/elk/samples/: entry_point.c
fasterthanlime/part-1/elk/src/: main.rs
src/: main.rs
