[package]
name = "rs-before-main"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
strip = true
opt-level = "z"     # Optimize for size.
lto=true            # link time optimization
panic="abort"       # Don't unwind verbosely, just stop.

[dependencies]
libc = { version = "0.2", default-features = false }
